[package]
name = "highs"
version = "1.6.1"
authors = ["Ophir LOJKINE", "rust-or"]
edition = "2021"
description = "Safe rust bindings for the HiGHS linear programming solver. See http://highs.dev."
license = "MIT"
repository = "https://github.com/rust-or/highs"
keywords = ["linear-programming", "optimization", "math", "solver"]

[features]
bundled = ["highs-sys/bundled"]

[dependencies]
highs-sys = { git = "https://www.github.com/mmghannam/highs-sys", branch="no-build", default-features = false, features=["bundled", "libz"] }
##highs-sys = { path = "../highs-sys", default-features = false, features=["build", "libz"] }

log = "0.4.17"
