[package]
name = "highs"
version = "1.6.1"
authors = ["Ophir LOJKINE", "rust-or"]
edition = "2021"
description = "Safe rust bindings for the HiGHS linear programming solver. See http://highs.dev."
license = "MIT"
repository = "https://github.com/rust-or/highs"
keywords = ["linear-programming", "optimization", "math", "solver"]

#[features]
#bundled = ["highs-sys"]

[dependencies]
#highs-sys = { version="1.11.0", default-features = false, features=["build", "libz"] }
#highs-sys = { git = "https://www.github.com/mmghannam/highs-sys", branch="master", default-features = false, features=["build", "libz"] }
highs-sys = { path = "../highs-sys", default-features = false, features=["build", "libz"] }

log = "0.4.17"
